[package]
name = "cardano-state-viz"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cardano-state-viz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
blake2 = "0.10.6"
blockfrost = "1.1.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
crossterm = "0.29.0"
dirs = "6.0.0"
hex = "0.4.3"
minicbor = { version = "2.1.3", features = ["derive"] }
petgraph = "0.8.3"
ratatui = "0.30.0-beta.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tempfile = "3.23.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
